@@ -1,10 +1,12 @@
 # -*- python -*-
 
+from professor2.utils import mkdict as _mkdict
+
 def read_paramsfile(path):
     """
     Read a file with parameters
     """
-    rtn = {}
+    rtn = _mkdict()
     with open(path, "r") as f:
         L = [l.strip() for l in f if not l.startswith("#")]
         for num, line in enumerate(L):
@@ -12,7 +14,7 @@ def read_paramsfile(path):
             if len(parts) == 2:
                 rtn[parts[0]] = float(parts[1])
             elif len(parts) == 1:
-                rtn["PARAM%i"%num] = float(parts[0])
+                rtn["PARAM%i" % num] = float(parts[0])
             else:
                 print "Error in parameter input format"
                 import sys
@@ -22,8 +24,8 @@ def read_paramsfile(path):
 def read_limitsandfixed(fname):
     """
     Read a text file e.g.
-    PARAM1  0.54444       # interpreted as limits
-    PARAM2  0         1   # interpreted as fixed param
+    PARAM1  0         1   # interpreted as fixed param
+    PARAM2  0.54444       # interpreted as limits
     """
     limits, fixed = {}, {}
     if fname is not None:
@@ -31,8 +33,8 @@ def read_limitsandfixed(fname):
             for l in f:
                 if not l.startswith("#"):
                     temp = l.split()
-                    if len(temp)==2:
+                    if len(temp) == 2:
                         fixed[temp[0]] = float(temp[1])
-                    elif len(temp)==3:
+                    elif len(temp) == 3:
                         limits[temp[0]] = (float(temp[1]), float(temp[2]))
     return limits, fixed
